[package]
name = "bento"
version = "0.1.0"
edition = "2021"

[dependencies]
cgroups-rs = "0.3"
clap = { version = "4.2", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
nix = "0.26"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

[package.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"

[package.metadata.cross.build.env]
passthrough = ["RUST_BACKTRACE", "RUST_LOG"]
