[package]
name = "bento"
version = "0.1.0"
repository = "https://github.com/kevinji/bento"
authors = ["Kevin Ji"]
edition = "2021"

[dependencies]
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
capctl = "0.2"
cgroups-rs = "0.3"
lddtree = "0.3"
seccompiler = "0.4"

[target.'cfg(target_os = "linux")'.dependencies.nix]
version = "0.27"
features = ["fs", "hostname", "mount", "sched", "socket", "user"]

[package.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"

[package.metadata.cross.build.env]
passthrough = ["RUST_BACKTRACE", "RUST_LOG"]
